ensure header links are visible

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -22,6 +22,11 @@
       a {
         color: #fff;
       }
+      .dropdown-menu {
+        a {
+          color: $primary;
+        }
+      }
     }
-  }
+  }  
 }
